<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.ralfspoeth</groupId>
    <artifactId>jsontestsuite</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <url>https://github.com/ralfspoeth/jsontestsuite</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>24</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <name>JSON Test Suite</name>
    <description>
        This project tests the JSON IO parser.
    </description>

    <scm>
        <url>scm:git:https://github.com/ralfspoeth/jsontestsuite</url>
        <developerConnection>scm:git:https://github.com/ralfspoeth/jsontestsuite.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/license/mit/</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Ralf Spöth</name>
            <email>ralf.spoeth@gmail.com</email>
        </developer>
    </developers>

    <dependencies>
        <dependency>
            <groupId>io.github.ralfspoeth</groupId>
            <artifactId>json</artifactId>
            <version>1.1.26</version>
        </dependency>
    </dependencies>

</project>